# velo

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  deny.toml  docker-compose.yml
examples/: Cargo.toml  README.md
examples/examples/: mpsc_fanin.rs  ping_pong.rs  rendezvous_nixl_gpu_two_proc.rs  rendezvous_nixl_two_proc.rs  throughput.rs
examples/examples/soak/: main.rs  messenger.rs  rendezvous.rs  stream.rs
examples/examples/soak/faults/: mod.rs
examples/examples/soak/harness/: builder.rs  mod.rs  oracle.rs  progress.rs  rss.rs  tier.rs
examples/src/: lib.rs
lib/velo/: Cargo.toml  README.md
lib/velo-discovery/: Cargo.toml  README.md
lib/velo-discovery/src/: filesystem.rs  filesystem_service.rs  lib.rs
lib/velo-discovery/src/etcd/: mod.rs
lib/velo-discovery/src/nats/: mod.rs  subjects.rs
lib/velo-discovery/tests/: etcd_discovery.rs  nats_discovery.rs
lib/velo-ext/: Cargo.toml
lib/velo-ext/src/: discovery.rs  id.rs  lib.rs  observability.rs  streaming.rs  transport.rs
lib/velo-ext/src/id/: address.rs  identity.rs  transport.rs
lib/velo-messenger/: Cargo.toml  README.md
lib/velo-messenger/examples/: ping_pong.rs  throughput.rs
lib/velo-messenger/src/: discovery.rs  large_payload.rs  lib.rs  messenger.rs
lib/velo-messenger/src/client/: builders.rs  mod.rs  peer_registry.rs
lib/velo-messenger/src/common/: message_id.rs  messages.rs  mod.rs  responses.rs
lib/velo-messenger/src/events/: backend.rs  handlers.rs  messages.rs  mod.rs  remote.rs
lib/velo-messenger/src/handlers/: manager.rs  mod.rs
lib/velo-messenger/src/server/: dispatcher.rs  mod.rs  system_handlers.rs
lib/velo-nixl/: Cargo.toml
lib/velo-nixl/src/: lib.rs
lib/velo-nixl/tests/: smoke.rs  vram_smoke.rs
lib/velo-observability/: Cargo.toml  README.md
lib/velo-observability/src/: lib.rs
lib/velo-queue/: Cargo.toml
lib/velo-queue/examples/: manual_ack.rs  manual_ack_messenger.rs  manual_ack_nats.rs
lib/velo-queue/src/: ack.rs  backend.rs  error.rs  lib.rs  options.rs  receiver.rs  sender.rs  work_item.rs
lib/velo-queue/src/backends/: memory.rs  messenger.rs  mod.rs  nats.rs
lib/velo-queue/tests/: memory_manual_ack.rs  messenger_integration.rs  messenger_manual_ack.rs  nats_integration.rs  nats_manual_ack.rs
lib/velo-rendezvous/: Cargo.toml  README.md
lib/velo-rendezvous/src/: consumer.rs  handle.rs  handlers.rs  lib.rs  store.rs  transparent.rs  write.rs
lib/velo-simulation/: Cargo.toml  README.md
lib/velo-simulation/examples/: sim_echo.rs
lib/velo-simulation/src/: discovery.rs  fabric.rs  lib.rs  network.rs  transport.rs
lib/velo-streaming/: Cargo.toml  README.md  build.rs
lib/velo-streaming/examples/: mpsc_fanin.rs
lib/velo-streaming/src/: anchor.rs  control.rs  frame.rs  grpc_transport.rs  handle.rs  lib.rs  quic_transport.rs  sender.rs  tcp_transport.rs  transport.rs  velo_transport.rs
lib/velo-streaming/src/mpsc/: anchor.rs  control.rs  frame.rs  mod.rs  sender.rs  types.rs
lib/velo-streaming/tests/: cancel.rs  endurance.rs  endurance_remote.rs  grpc_transport.rs  mock_transport.rs  mpsc_integration.rs  mpsc_remote_integration.rs  ordering.rs  tcp_transport.rs  timing.rs  velo_integration.rs  velo_specific.rs  velo_transport.rs
lib/velo-streaming/tests/common/: mod.rs
lib/velo/src/: discovery.rs  events.rs  lib.rs  messenger.rs  observability.rs  queue.rs  rendezvous.rs  simulation.rs  streaming.rs  transports.rs
lib/velo/src/discovery/: filesystem.rs  filesystem_service.rs
lib/velo/src/discovery/etcd/: mod.rs
lib/velo/src/discovery/nats/: mod.rs  subjects.rs
lib/velo/src/events/: event.rs  factory.rs  handle.rs  manager.rs  status.rs
lib/velo/src/events/base/: system.rs
lib/velo/src/events/slot/: completion.rs  entry.rs  waiter.rs
lib/velo/src/messenger/: discovery.rs  messenger.rs
lib/velo/src/messenger/client/: builders.rs  mod.rs  peer_registry.rs
lib/velo/src/messenger/common/: events.rs  message_id.rs  messages.rs  responses.rs
lib/velo/src/messenger/events/: backend.rs  handlers.rs  messages.rs  mod.rs  remote.rs
lib/velo/src/messenger/handlers/: manager.rs  mod.rs
lib/velo/src/messenger/server/: dispatcher.rs  mod.rs  system_handlers.rs
lib/velo/src/queue/: ack.rs  backend.rs  error.rs  options.rs  receiver.rs  sender.rs  work_item.rs
lib/velo/src/queue/backends/: memory.rs  messenger.rs  mod.rs  nats.rs
lib/velo/src/rendezvous/: consumer.rs  handle.rs  handlers.rs  nixl_endpoint.rs  protocol.rs  store.rs  transparent.rs
lib/velo/src/simulation/: discovery.rs  fabric.rs  network.rs  transport.rs
lib/velo/src/streaming/: SATURATION.md  anchor.rs  control.rs  frame.rs  grpc_transport.rs  handle.rs  sender.rs  tcp_transport.rs  transport.rs  util.rs  velo_transport.rs
lib/velo/src/streaming/mpsc/: anchor.rs  control.rs  frame.rs  sender.rs  types.rs
lib/velo/src/transports/: address.rs  transport.rs
lib/velo/src/transports/grpc/: server.rs  transport.rs
lib/velo/src/transports/nats/: mod.rs  subjects.rs  transport.rs  utils.rs
lib/velo/src/transports/tcp/: framing.rs  listener.rs  mod.rs  transport.rs
lib/velo/src/transports/uds/: listener.rs  transport.rs
lib/velo/tests/: basic_messaging.rs  observability_scenarios.rs  rendezvous_integration.rs  rendezvous_nixl_integration.rs  rendezvous_nixl_loopback.rs  streaming_transport.rs  two_instance_events.rs
lib/velo/tests/discovery/: etcd_discovery.rs  nats_discovery.rs
lib/velo/tests/queue/: memory_manual_ack.rs  messenger_integration.rs  messenger_manual_ack.rs  nats_integration.rs  nats_manual_ack.rs
lib/velo/tests/streaming/: cancel.rs  endurance.rs  endurance_remote.rs  grpc_transport.rs  mock_transport.rs  mpsc_integration.rs  mpsc_remote_integration.rs  observability.rs  ordering.rs  tcp_transport.rs  timing.rs  velo_integration.rs  velo_specific.rs  velo_transport.rs
lib/velo/tests/transports/: backpressure.rs  nats_health.rs  nats_integration.rs  tcp_shutdown.rs  uds_host_affinity.rs  uds_integration.rs  uds_shutdown.rs  zmq_integration.rs
(+61 files in other folders)
