# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "lib/velo",
    "lib/velo-common",
    "lib/velo-discovery",
    "lib/velo-events",
    "lib/velo-messenger",
    "lib/velo-observability",
    "lib/velo-transports",
    "lib/velo-streaming",
    "lib/velo-rendezvous",
    "lib/velo-simulation",
    "lib/velo-queue",
]
exclude = ["examples"]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
description = "Velo Active Messenging Library"
authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/velo"
repository = "https://github.com/ai-dynamo/velo.git"
keywords = ["nvidia", "distributed"]

[workspace.dependencies]
# Local crates
velo = { path = "lib/velo", version = "0.1.1" }
velo-common = { path = "lib/velo-common", version = "0.1.0" }
velo-discovery = { path = "lib/velo-discovery", version = "0.1.0" }
velo-events = { path = "lib/velo-events", version = "0.1.0" }
velo-messenger = { path = "lib/velo-messenger", version = "0.2.0" }
velo-observability = { path = "lib/velo-observability", version = "0.1.0" }
velo-transports = { path = "lib/velo-transports", version = "0.2.0" }
velo-streaming = { path = "lib/velo-streaming", version = "0.3.0" }
velo-queue = { path = "lib/velo-queue", version = "0.2.0" }
velo-rendezvous = { path = "lib/velo-rendezvous", version = "0.1.0" }

# External dependencies
anyhow = { version = "1" }
async-nats = { version = "0.45.0", features = ["service"] }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
async_zmq = { version = "0.4.0" }
blake3 = { version = "1" }
bytes = { version = "1" }
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
    "clock",
    "now",
    "serde",
] }
cudarc = { version = "0.19.2", features = ["cuda-version-from-build-system", "fallback-latest"] }
dashmap = { version = "6.1" }
derive_builder = { version = "0.20" }
derive-getters = { version = "0.5" }
either = { version = "1.13", features = ["serde"] }
etcd-client = { version = "0.17.0", features = ["tls"] }
flume = { version = "0.12.0" }
futures = { version = "0.3" }
hf-hub = { version = "0.4.2", default-features = false, features = [
    "tokio",
    "rustls-tls",
    "ureq",
] }

# ModelExpress for model downloading
modelexpress-client = { version = "0.2.0" }
modelexpress-common = { version = "0.2.0" }

humantime = { version = "2.2.0" }
libc = { version = "0.2" }
oneshot = { version = "0.1.13", features = ["std", "async"] }
parking_lot = "0.12.5"
prometheus = { version = "0.14"}
rand = { version = "0.9.2" }
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
rmp-serde = { version = "1" }
serde_bytes = { version = "0.11" }
# "rc" is for async-openai. Allows serializing Rc and Arc. Generally avoid doing that.
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
thiserror = { version = "2.0.17" }
tmq = { version = "0.5.0" }
zmq = { version = "0.10" }
tokio = { version = "=1.48.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.17", features = ["codec", "net", "rt", "io-util"] }
tower-http = { version = "0.6", features = ["trace"] }
axum = { version = "=0.8.4", features = ["macros"] }
axum-core = { version = "0.5.2" }
hyper = { version = "=1.7.0" }
hyper-util = { version = "=0.1.17" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "json",
] }
tracing-opentelemetry = { version = "0.32.0" }
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "grpc-tonic"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
url = { version = "2.5", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

[profile.dev]
# release level optimizations otherwise everything feels slow
# opt-level = 3

[profile.release]
# These make the build much slower but shrink the binary, and could help performance
codegen-units = 1
lto = "thin"
