# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "lib/velo",
    "lib/velo-ext",
]
exclude = ["examples"]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
description = "Velo Active Messenging Library"
authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/velo"
repository = "https://github.com/ai-dynamo/velo.git"
keywords = ["nvidia", "distributed"]

[workspace.dependencies]
# Local crates — only the two published surfaces remain after the fold.
velo = { path = "lib/velo", version = "0.4.0" }
# Exact-pin (`=`) is intentional: velo-ext is the published trait surface
# external implementors compile against. A non-`=` requirement would let a
# future "compatible" patch silently re-resolve downstream lockfiles, which
# is exactly the bug that motivated the velo / velo-ext split.
velo-ext = { path = "lib/velo-ext", version = "=0.1.0" }

# External dependencies.
#
# Pinning policy: caret requirements (Cargo's default — `"1.7"` resolves
# `>=1.7.0, <2.0.0`). Hard `=` pins are reserved for documented compatibility
# lockstep constraints (none currently). As a library workspace, pinning here
# would propagate to downstream consumers' resolvers, so we keep upper bounds
# permissive and let `Cargo.lock` (committed for CI reproducibility) handle
# the build-time pinning.

anyhow = { version = "1.0.0" }
async-nats = { version = "0.45.0", features = ["service"] }
async-stream = { version = "0.3" }
bytes = { version = "1" }
dashmap = { version = "6.1" }
derive_builder = { version = "0.20" }
derive-getters = { version = "0.5" }
etcd-client = { version = "0.17.0", features = ["tls"] }
flume = { version = "0.12.0" }
futures = { version = "0.3" }
parking_lot = "0.12.5"
prometheus = { version = "0.14"}
rmp-serde = { version = "1" }
serde_bytes = { version = "0.11" }
# "rc" is for async-openai. Allows serializing Rc and Arc. Generally avoid doing that.
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
tempfile = "3"
thiserror = { version = "2" }
zmq = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.17", features = ["codec", "net", "rt", "io-util"] }
axum = { version = "0.8.4", features = ["macros"] }
hyper = { version = "1.7.0" }
hyper-util = { version = "0.1.17" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "json",
] }

tracing-opentelemetry = { version = "0.32.0" }
opentelemetry = { version = "0.31.0", features = ["trace"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

[profile.dev]
# release level optimizations otherwise everything feels slow
# opt-level = 3

[profile.release]
# These make the build much slower but shrink the binary, and could help performance
codegen-units = 1
lto = "thin"
