# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "velo-examples"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[features]
default = []
zmq = ["velo/zmq"]
grpc = ["velo/grpc"]
nixl = ["velo/nixl", "dep:dynamo-memory"]

[dependencies]
velo = { path = "../lib/velo", features = ["test-helpers"] }
# Used only by the GPU example (`rendezvous_nixl_gpu_two_proc`) for the
# `MemoryDescriptor` extension trait — calling `.size()` / `.addr()` on the
# `DeviceArenaBuffer` returned from `get_into_device_arena`.
dynamo-memory = { version = "1.1.0", optional = true }

anyhow = "1"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
flume = "0.12.0"
futures = "0.3"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "=1.48.0", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

hdrhistogram = { version = "7", default-features = false }
prometheus = "0.14"
crc32fast = "1"
humantime = "2"

[[example]]
name = "ping_pong"

[[example]]
name = "throughput"

[[example]]
name = "mpsc_fanin"

[[example]]
name = "soak"
path = "examples/soak/main.rs"
required-features = ["grpc"]

[[example]]
name = "rendezvous_nixl_two_proc"
required-features = ["nixl"]

[[example]]
name = "rendezvous_nixl_gpu_two_proc"
required-features = ["nixl"]
