# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "velo-discovery"
version = "0.1.0"
edition.workspace = true
description = "Filesystem-based peer discovery for Velo distributed systems"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
velo-common = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
fs4 = { version = "0.13", features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
rmp-serde = { workspace = true }
