# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "velo-discovery"
version = "0.1.1"
edition.workspace = true
description = "Filesystem-based peer discovery for Velo distributed systems"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
nats = ["dep:async-nats", "dep:bs58"]
etcd = ["dep:etcd-client"]

[dependencies]
velo-common = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
fs4 = { version = "0.13", features = ["tokio"] }

# optional dependencies (nats feature)
async-nats = { workspace = true, optional = true }
bs58 = { version = "0.5", optional = true }

# optional dependencies (etcd feature)
etcd-client = { workspace = true, optional = true }

[dev-dependencies]
async-nats = { workspace = true }
etcd-client = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
rmp-serde = { workspace = true }
