# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "velo-nixl"
version = "0.1.0"
edition.workspace = true
description = "NIXL-backed transfer helpers for velo (Phase 2)"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
# Workspace-internal helper. Per CLAUDE.md hard rule #1, only `velo` and
# `velo-ext` are publishable — adding a third publishable crate reopens the
# silent semver-bump bug class that motivated the workspace collapse.
publish = false

[dependencies]
nixl-sys = { path = "../../../nixl/src/bindings/rust" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
