# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "velo-observability"
version = "0.1.1"
edition.workspace = true
description = "Prometheus metrics and optional distributed tracing helpers for Velo"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
distributed-tracing = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
test-helpers = []

[dependencies]
prometheus = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
