# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "velo-queue"
version = "0.1.0"
edition.workspace = true
description = "Named work queue abstraction for Velo distributed systems"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
nats = ["dep:async-nats"]
messenger = ["dep:velo-messenger", "dep:velo-common", "dep:parking_lot"]

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# Optional dependencies (messenger feature)
velo-messenger = { workspace = true, optional = true }
velo-common = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# Optional dependencies (nats feature)
async-nats = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
serde = { workspace = true, features = ["derive"] }

[package.metadata.cargo-machete]
ignored = ["serde"]
