# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "velo-rendezvous"
version = "0.1.1"
edition.workspace = true
description = "Rendezvous data staging and large payload transfer for velo"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
distributed-tracing = ["velo-observability/distributed-tracing", "velo-messenger/distributed-tracing"]

[dependencies]
velo-common = { workspace = true }
velo-messenger = { workspace = true }
velo-observability = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
