# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "velo-streaming"
version = "0.1.0"
edition.workspace = true
description = "Typed exclusive-attachment streaming abstraction over the velo transport"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
grpc = ["dep:tonic", "dep:prost", "dep:tokio-stream"]
quic = ["dep:quinn", "dep:rustls", "velo-transports/quic"]
distributed-tracing = ["velo-observability/distributed-tracing", "velo-messenger/distributed-tracing"]

[dependencies]
velo-common = { workspace = true }
velo-messenger = { workspace = true }
velo-observability = { workspace = true }
velo-transports = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
derive_builder = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
socket2 = "0.6"

# Optional dependencies for grpc feature
tonic = { version = "0.13.1", optional = true }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Optional dependencies for quic feature
quinn = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }

[package.metadata.cargo-machete]
ignored = ["prost", "quinn", "rustls"]  # prost: gRPC feature; quinn/rustls: quic feature

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
velo-common = { workspace = true }
velo-messenger = { workspace = true }
velo-transports = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = "0.13.1"

[[test]]
name = "grpc_transport"
required-features = ["grpc"]
