# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "velo"
version = "0.1.0"
edition.workspace = true
description = "High-level facade for Velo distributed systems"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
etcd = ["velo-discovery/etcd"]
grpc = ["velo-streaming/grpc"]
zmq = ["velo-transports/zmq"]
quic = ["velo-transports/quic", "velo-streaming/quic", "velo-messenger/quic"]
queue-nats = ["velo-queue/nats"]
queue-messenger = ["velo-queue/messenger"]
distributed-tracing = [
    "velo-messenger/distributed-tracing",
    "velo-streaming/distributed-tracing",
    "velo-transports/distributed-tracing",
]

[dependencies]
velo-common = { workspace = true }
velo-discovery = { workspace = true }
velo-events = { workspace = true }
velo-messenger = { workspace = true }
velo-observability = { workspace = true }
velo-streaming = { workspace = true }
velo-queue = { workspace = true }
velo-rendezvous = { workspace = true }
velo-transports = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
velo-observability = { workspace = true, features = ["test-helpers"] }
velo-transports = { workspace = true }
